<resources>
    <string name="app_name">AppCoordenadasGPSKotlin</string>

    <!-- textos do app -->
    <string name="txt_coordenadas_gps_java">Coordenadas GPS (Kotlin)</string>
    <string name="txt_valor_zero">0.00</string>
    <string name="txt_longitude">Longitude</string>
    <string name="txt_latitude">Latitude</string>
    <string name="txt_pin_gps_no_mapa">Pin GPS no Mapa</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>